# vs2lab

./: .gitignore  Pipfile  pyproject.toml
lab2/rpc/: client.py  constRPC.py  dblist.py  rpc.py  runcl.py  runsrv.py  server.py
lab3/: mappers.py  reducers.py  splitter.py
lab3/zmq3/: tasksrc.py
lab3/zmq4/: constants.py  log.py  mapper.py  reducer.py  splitter.py
lab4/chord/: chordnode.py  constChord.py  context.py  doit.py
lab5/mutex/: process.py
