[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Stefan Maier", email = "git@univ-exp.com"},
]
dependencies = [
    "redis",
    "rpyc",
    "zmq",
    "ipython",
    "jupyter",
    "jupyter-server",
    "ipyparallel",
    "nltk",
    "rich>=13.7.0",
    "redis-server>=6.0.9",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

[tool.pdm.dev-dependencies]
dev = [
    "pylint",
    "autopep8",
    "rope",
    "black>=23.11.0",
    "isort>=5.12.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
